force-app/main/default/objects/AH_SFDC_Source_Errors__c/AH_SFDC_Source_Errors__c.object-meta.xml
<CustomObject>
    <description>Object that stores errors from Apex Classes, Apex Triggers, Visualforce Pages, Visualforce Components</description>
    <label>Salesforce Source Error</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>SFDC Source Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Source Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>