force-app/main/default/objects/AH_SFDC_Source_Errors__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <formula>Salesforce_Source_Control__r.API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API Name</label>
    <type>Text</type>
</CustomField>