force-app/main/default/objects/AH_SFDC_Source_Errors__c/fields/IsFixed__c.field-meta.xml
<CustomField>
    <fullName>IsFixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFixed</label>
    <type>Checkbox</type>
</CustomField>