force-app/main/default/objects/AH_SFDC_Source_Errors__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of Method (or function) the error occurred in.</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>