force-app/main/default/objects/AH_SFDC_Source_Errors__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User that the error was thrown by</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Source_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>