force-app/main/default/objects/AH_SFDC_Source_Errors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_Source_Type__c</columns>
    <columns>API_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Happened_At__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>