force-app/main/default/objects/AH_SFDC_Source_Errors__c/listViews/MY_SEARCH.listView-meta.xml
<ListView>
    <fullName>MY_SEARCH</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Happened_At__c</columns>
    <columns>User__c</columns>
    <columns>Description__c</columns>
    <columns>IsFixed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>contains</operation>
        <value>StatusReport</value>
    </filters>
    <filters>
        <field>IsFixed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>MY SEARCH</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>