force-app/main/default/objects/AH_SFDC_Source_Errors__c/listViews/New_Today.listView-meta.xml
<ListView>
    <fullName>New_Today</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_Source_Type__c</columns>
    <columns>API_Name__c</columns>
    <columns>Happened_At__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>IsFixed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>New Today</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>