force-app/main/default/objects/AH_SFDC_Source_Errors__c/listViews/Process_Builder_Errors.listView-meta.xml
<ListView>
    <fullName>Process_Builder_Errors</fullName>
    <columns>NAME</columns>
    <columns>API_Name__c</columns>
    <columns>Happened_At__c</columns>
    <columns>User__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Source_Type__c</field>
        <operation>equals</operation>
        <value>Process Builder</value>
    </filters>
    <filters>
        <field>IsFixed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Process Builder Errors</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>